--- a/node/wechat/js_sdk/views/search.ejs
+++ b/node/wechat/js_sdk/views/search.ejs
@@ -1,9 +1,50 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <title>search</title>
+    <script type="text/javascript" src="http://res2.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 </head>
 <body>
 <h1>ddddddddddd</h1>
+
+<script>
+    /*
+    * 1. 绑定域名
+    *   - 在测试接口页面上填写js安全域名接口
+    * 2. 引入js文件 http://res2.wx.qq.com/open/js/jweixin-1.4.0.js
+    * 3. 配置微信的权限
+    * */
+    wx.config({
+        debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+        appId: 'wx96ad96c7e15b378a', // 必填，公众号的唯一标识
+        timestamp: '<%= timestamp %>', // 必填，生成签名的时间戳
+        nonceStr: '<%= noncestr %>', // 必填，生成签名的随机串
+        signature: '<%= signature %>',// 必填，签名
+        jsApiList: [
+            'stopRecord',
+            'startRecord',
+            'translateVoice'
+        ], // 必填，需要使用的JS接口列表
+        success: function(res) {
+            // 以键值对的形式返回，可用的api值true，不可用为false
+            // 如：{"checkResult":{"chooseImage":true},"errMsg":"checkJsApi:ok"}
+            console.log(res)
+        }
+    });
+    //  步骤四：通过ready接口处理成功验证
+    wx.ready(function () {
+        // config信息验证后会执行ready方法，所有接口调用都必须在config接口获得结果之后，
+        // config是一个客户端的异步操作，所以如果需要在页面加载时就调用相关接口，
+        // 则须把相关接口放在ready函数中调用来确保正确执行。对于用户触发时才调用的接口，
+        // 则可以直接调用，不需要放在ready函数中。
+    });
+    // 步骤五：通过error接口处理失败验证
+    wx.error(function (res) {
+        // config信息验证失败会执行error函数，如签名过期导致验证失败，具体错误信息可以打开config的debug模式查看，
+        // 也可以在返回的res参数中查看，对于SPA可以在这里更新签名。
+    });
+
+</script>
 </body>
 </html>
