--- a/node/wechat/js_sdk/views/search.ejs
+++ b/node/wechat/js_sdk/views/search.ejs
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>search</title>
-    <script type="text/javascript" src="http://res2.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 </head>
 <body>
 <h1>ddddddddddd</h1>
-
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script>
     /*
     * 1. 绑定域名
@@ -26,11 +25,11 @@
             'startRecord',
             'translateVoice'
         ], // 必填，需要使用的JS接口列表
-        success: function(res) {
-            // 以键值对的形式返回，可用的api值true，不可用为false
-            // 如：{"checkResult":{"chooseImage":true},"errMsg":"checkJsApi:ok"}
-            console.log(res)
-        }
+        // success: function (res) {
+        //     // 以键值对的形式返回，可用的api值true，不可用为false
+        //     // 如：{"checkResult":{"chooseImage":true},"errMsg":"checkJsApi:ok"}
+        //     console.log(res)
+        // }
     });
     //  步骤四：通过ready接口处理成功验证
     wx.ready(function () {
@@ -38,6 +37,21 @@
         // config是一个客户端的异步操作，所以如果需要在页面加载时就调用相关接口，
         // 则须把相关接口放在ready函数中调用来确保正确执行。对于用户触发时才调用的接口，
         // 则可以直接调用，不需要放在ready函数中。
+        wx.checkJsApi({
+            jsApiList: [
+                'stopRecord',
+                'startRecord',
+                'translateVoice'
+            ], // 需要检测的JS接口列表，所有JS接口列表见附录2,
+            success: function (res) {
+                // 以键值对的形式返回，可用的api值true，不可用为false
+                // 如：{"checkResult":{"chooseImage":true},"errMsg":"checkJsApi:ok"}
+            },
+            fail: function (res) {
+                alert('errdd')
+                // config信息验证失败会执行error函数，如签名过期导致验证失败，具体错误信息可以打开config的debug模式查看，也可以在返回的res参数中查看，对于SPA可以在这里更新签名。
+            }
+        })
     });
     // 步骤五：通过error接口处理失败验证
     wx.error(function (res) {
